--- a/languages/event-integration-sv_SE.po
+++ b/languages/event-integration-sv_SE.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Event Manager Integration\n"
 "POT-Creation-Date: 2020-03-31 10:20+0200\n"
-"PO-Revision-Date: 2020-03-31 10:21+0200\n"
+"PO-Revision-Date: 2021-06-17 13:49+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: sv\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 1.8.12\n"
+"X-Generator: Poedit 3.0\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-WPHeader: event-manager-integration.php\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -1216,6 +1216,10 @@ msgstr "Föregående"
 #: source/php/Module/Event/Event.php:382
 msgid "Search"
 msgstr "Sök"
+
+#: source/php/Module/Event/Event.php:383
+msgid "Reset"
+msgstr "Återställ"
 
 #: source/php/Module/Event/Event.php:383
 #: source/php/Module/SubmitForm/views/formfields.blade.php:322
